--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
     "home": "HOME",
     "about": "ABOUT",
-    "countries": "Countries",
+    "products": "Products",
     "services": "Services",
     "contact": "CONTACT US",
 
