--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -1,50 +1,34 @@
 {
-    "home": "HOME",
-    "about": "ABOUT",
-    "countries": "Countries",
-    "services": "Services",
-    "contact": "CONTACT US",
+    "home": "TRANG CHỦ",
+    "about": "VỀ CHÚNG TÔI",
+    "products": "SẢN PHẨM",
+    "contact": "LIÊN HỆ",
+    "contactUs": "Liên Hệ",
+    "aboutUs": "Về chúng tôi",
 
-    "welcomeTo": "WELCOME TO",
-    "dolceHanoi": "DOLCEHANOI",
-    "innovate": "Innovate",
-    "and": "and",
-    "expand": "expand",
-    "yourBusinessReach": "your business reach.",
+    "addressDetails": "Số 7 Yên Thế, Điện Biên, Ba Đình, Hà Nội",
+    "socials": "Liên kết",
 
-    "italy": "Italy",
-    "italyBullet1": "Rich cultural heritage and reputation for premium luxury goods.",
-    "italyBullet2": "World-renowned craftsmanship and design excellence.",
-    "italyBullet3": "High-quality food and beverage products, including wines and olive oil.",
-    "italyBullet4": "Established industries in fashion, automotive, and machinery.",
+    "featuredItemsHeading": "Sản phẩm nổi bật",
+    "details": "Chi tiết",
+    "description": "Mô tả",
+    "benefits": "Lợi ích",
 
-    "vietnam": "Vietnam",
-    "vietnamBullet1": "Rapidly growing economy with a favorable investment climate.",
-    "vietnamBullet2": "Abundant and cost-effective labor force, attracting manufacturing opportunities.",
-    "vietnamBullet3": "Leading exporter of textiles, garments, and footwear.",
-    "vietnamBullet4": "Increasingly diverse agricultural products and seafood exports.",
+    "curtains": "Rèm",
 
-    "countriesParagraph1": "Italy's advanced technology and design expertise complement Vietnam's manufacturing capabilities.",
-    "countriesParagraph2": "Vietnam's sourcing opportunities offer cost-effective solutions for Italian businesses.",
-    "countriesParagraph3": "Italy's premium products find a growing market in Vietnam's emerging middle class.",
+    "aboutParagraph1": "Xuân Hòa Home là nhà sản xuất và bán lẻ nổi tiếng với các sản phẩm đồ gia dụng và trang trí nội thất chất lượng cao và phong cách. Với sự tập trung vào tay nghề thủ công và thiết kế, Xuân Hòa Home tạo ra những tác phẩm vừa có chức năng vừa có tính thẩm mỹ.",
+    "aboutParagraph2": "Công ty cung cấp nhiều lựa chọn sản phẩm cho nhiều không gian sống khác nhau, bao gồm phòng khách, phòng ngủ, phòng ăn và khu vực ngoài trời. Bộ sưu tập của chúng tôi bao gồm rèm cửa sổ, cửa sổ và cửa ra vào, bàn ghế, gạch gỗ, v.v. Mỗi mảnh được chế tạo tỉ mỉ bằng vật liệu chất lượng để đảm bảo độ bền và tuổi thọ.",
+    "readMore": "Xem thêm",
+    "aboutParagraph3": "Xuân Hòa Home tự hào về sự quan tâm đến từng chi tiết và cam kết cung cấp các sản phẩm đáp ứng nhu cầu và sở thích của khách hàng. Các thiết kế thường là sự pha trộn giữa các yếu tố hiện đại và truyền thống, cho phép khách hàng tìm thấy những sản phẩm phù hợp với phong cách cá nhân của chúng tôi.",
+    "aboutParagraph4": "Ngoài bộ sưu tập tiêu chuẩn, Xuân Hòa Home còn cung cấp các tùy chọn tùy chỉnh, cho phép khách hàng cá nhân hóa sản phẩm của chúng tôi để phù hợp với yêu cầu cụ thể của chúng tôi. Điều này bao gồm việc lựa chọn các loại vải, lớp hoàn thiện và kích thước khác nhau để tạo ra một tác phẩm thực sự độc đáo.",
+    "aboutParagraph5": "Công ty duy trì sự tập trung mạnh mẽ vào tính bền vững và trách nhiệm với môi trường. Chúng tôi cố gắng sử dụng các vật liệu và quy trình sản xuất thân thiện với môi trường, giảm thiểu tác động của chúng tôi đối với môi trường.",
+    "aboutParagraph6": "Với mạng lưới các showroom và đối tác bán lẻ, Xuân Hòa Home đưa sản phẩm của mình tiếp cận khách hàng ở nhiều địa điểm khác nhau. Cho dù bạn đang trang bị nội thất cho một ngôi nhà mới hay đang tìm cách nâng cấp ngôi nhà hiện tại của mình, Xuân Hòa Home đều cung cấp nhiều lựa chọn chất lượng cao để bạn lựa chọn.",
 
-    "servicesHeading": "Sourcing and procurement assistance to find the right partners and products",
-    "mining": "Mining",
-    "miningParagraph": "Sales of commodities such as: coal, marble, and many others.",
-    "trading": "Trading",
-    "tradingParagraph": "Sales of raw materials (coffee, rice, iron, steel, chemical sector) and finished products",
-    "production": "Production",
-    "productionParagraph": "Support in finding the right vendor for any kind of products even requiring high temperature to produce or high precision to make.",
+    "contactParagraph": "Hãy tự do liên hệ với chúng tôi với đề xuất dự án, báo giá hoặc ước tính, hoặc chỉ đơn giản là để nói xin chào. Đây là thông tin liên hệ của chúng tôi.",
+    "address": "Địa chỉ",
+    "callUsNow": "Gọi ngay",
+    "emailUs": "Gửi email đến chúng tôi",
 
-    "servicesHeading2": "Support in opening a company or branch in Vietnam",
-    "hanoi": "Mining",
-    "hanoiParagraph": "Sales of commodities such as: coal, marble, and many others.",
-    "northVietnam": "Trading",
-    "northVietnamParagraph": "Sales of raw materials (coffee, rice, iron, steel, chemical sector) and finished products",
-
-    "ctaParagraph": "Ready to unlock global opportunities and elevate your trading ventures? Partner with us today! Discover seamless solutions, unparalleled expertise, and a world of possibilities for your business. Contact us now to embark on a journey of growth and success in the international market. Let's connect and build a thriving future together!",
-    "contactUs": "Contact Us",
-    
-    "inItaly": "In Italy",
-    "inVietnam": "In Vietnam"
+    "sloganFooter": "Nâng tầm không gian sống",
+    "paragraphFooter": "Chào mừng bạn đến với một thế giới nơi mọi góc nhà kể một câu chuyện. Thương hiệu nội thất của chúng tôi tôn vinh vẻ đẹp của sự đơn giản và sức mạnh của thiết kế tỉ mỉ. Từ các vật liệu được lựa chọn cẩn thận đến sự chú trọng tận tâm đến chi tiết, nội thất của chúng tôi tạo nên bản sắc của sự sang trọng không chú ý. Hòa mình trong một không gian thanh bình, bao quanh bởi những món đồ mang lại cảm giác ấm áp, tinh tế và không thời gian. Khám phá lại niềm vui khi trở về nhà."
 }
