--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -72,5 +72,7 @@
     "windowsAndDoors": "Windows and Doors",
     "doorsAndWindows": "Windows and Doors",
     "woodenTiles": "Wooden tiles",
-    "tablesAndChairs": "Tables and chairs"
+    "tablesAndChairs": "Tables and chairs",
+
+    "downloadCatalogue": "Download catalogue"
 }
