--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -72,5 +72,7 @@
     "windowsAndDoors": "Cửa/cửa sổ",
     "doorsAndWindows": "Cửa/cửa sổ",
     "woodenTiles": "Vỉ gỗ",
-    "tablesAndChairs": "Bàn ghế"
+    "tablesAndChairs": "Bàn ghế",
+
+    "downloadCatalogue": "Tải catalogue"
 }
