--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -73,6 +73,12 @@
     "doorsAndWindows": "Cửa/cửa sổ",
     "woodenTiles": "Vỉ gỗ",
     "tablesAndChairs": "Bàn ghế",
+    "curtain": "Rèm",
+    "wooden-tile": "Vỉ gỗ",
+    "window": "Cửa/cửa sổ",
+    "table-and-chair": "Bàn ghế",
 
-    "downloadCatalogue": "Tải catalogue"
+    "downloadCatalogue": "Tải catalogue",
+
+    "youMayAlsoLike": "Có thể bạn thích"
 }
