widget and UI changes

--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -80,5 +80,8 @@
 
     "downloadCatalogue": "Download catalogue",
 
-    "youMayAlsoLike": "You may also like"
+    "youMayAlsoLike": "You may also like",
+
+    "guarantee": "Guarantee",
+    "ifInterested": "if you are interested"
 }
