--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -80,5 +80,8 @@
 
     "downloadCatalogue": "Tải catalogue",
 
-    "youMayAlsoLike": "Có thể bạn thích"
+    "youMayAlsoLike": "Có thể bạn thích",
+
+    "guarantee": "Cam kết",
+    "ifInterested": "nếu bạn hứng thú với sản phẩm này"
 }
