table and chair details page changes

--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -55,6 +55,8 @@
     "size": "Kích thước",
     "specs": "Thông số kỹ thuật",
     "colors": "Màu sắc",
+    "materials": "Vật liệu",
+    "weight": "Cân nặng",
 
     "guarantee1": "Bảo hành chính hãng 100%",
     "guarantee2": "Hỗ trợ hướng dẫn lắp đặt, tư vấn tận tình",
