--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -85,5 +85,8 @@
     "youMayAlsoLike": "Có thể bạn thích",
 
     "guarantee": "Cam kết",
-    "ifInterested": "nếu bạn hứng thú với sản phẩm này"
+    "ifInterested": "nếu bạn hứng thú với sản phẩm này",
+
+    "news": "Tin tức",
+    "createdAt": "Ngày đăng"
 }
