--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -83,5 +83,8 @@
     "youMayAlsoLike": "You may also like",
 
     "guarantee": "Guarantee",
-    "ifInterested": "if you are interested"
+    "ifInterested": "if you are interested",
+
+    "news": "News",
+    "createdAt": "Created at"
 }
