--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -86,5 +86,7 @@
     "ifInterested": "if you are interested",
 
     "news": "News",
-    "createdAt": "Created at"
+    "createdAt": "Created at",
+
+    "newProducts": "New products"
 }
