--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -88,5 +88,7 @@
     "ifInterested": "nếu bạn hứng thú với sản phẩm này",
 
     "news": "Tin tức",
-    "createdAt": "Ngày đăng"
+    "createdAt": "Ngày đăng",
+
+    "newProducts": "Sản Phẩm Mới"
 }
