--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -88,5 +88,7 @@
     "news": "News",
     "createdAt": "Created at",
 
-    "newProducts": "New products"
+    "newProducts": "New products",
+    "shelf": "Shelf",
+    "discount": "Contact for discount"
 }
