--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -90,5 +90,7 @@
     "news": "Tin tức",
     "createdAt": "Ngày đăng",
 
-    "newProducts": "Sản Phẩm Mới"
+    "newProducts": "Sản Phẩm Mới",
+    "shelf": "Tủ",
+    "discount": "Giá khuyến mãi: Liên Hệ"
 }
