--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -10,7 +10,7 @@
     "slogan2": "Creating Harmony Through Design",
     "slogan3": "Where Style Meets Comfort",
 
-    "addressDetails": "7 Yen The, Dien Bien, Ba Dinh, Ha Noi",
+    "addressDetails": "Nguyệt Quế 25-05 Vinhomes The Harmony, Hà Nội, Việt Nam",
     "socials": "Socials",
 
     "featuredItemsHeading": "Best Sellers",
