--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -10,7 +10,7 @@
     "slogan2": "Thiết kế tạo nên sự hài hòa",
     "slogan3": "Không gian độc đáo",
 
-    "addressDetails": "Số 7 Yên Thế, Điện Biên, Ba Đình, Hà Nội",
+    "addressDetails": "Nguyệt Quế 25-05 Vinhomes The Harmony, Hà Nội, Việt Nam",
     "socials": "Liên kết",
 
     "featuredItemsHeading": "Sản phẩm nổi bật",
