--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -22,7 +22,7 @@
 
     "aboutParagraph1": "Xuan Hoa Home is a renowned manufacturer and retailer known for its high-quality and stylish home appliances and decor offerings. With a focus on craftsmanship and design, Xuan Hoa Home creates pieces that are both functional and aesthetically pleasing.",
     "aboutParagraph2": "The company offers a wide range of products options for various living spaces, including living rooms, bedrooms, dining rooms, and outdoor areas. Our collection includes windows blinds, windows and doors, tables and chairs, wooden tiles, and more. Each piece is meticulously crafted using quality materials to ensure durability and longevity.",
-    "readMore": "Read more",
+    "readMore": "Read more...",
     "aboutParagraph3": "Xuan Hoa Home takes pride in its attention to detail and commitment to delivering products that meets the needs and preferences of its customers. The designs are often a blend of modern and traditional elements, allowing customers to find products that suits our personal style.",
     "aboutParagraph4": "In addition to our standard collection, Xuan Hoa Home also provides customization options, allowing customers to personalize our products to fit our specific requirements. This includes selecting different fabrics, finishes, and dimensions to create a truly unique piece.",
     "aboutParagraph5": "The company maintains a strong focus on sustainability and environmental responsibility. We strive to use eco-friendly materials and manufacturing processes, minimizing our impact on the environment.",
