--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -22,7 +22,7 @@
 
     "aboutParagraph1": "Xuân Hòa Home là nhà sản xuất và bán lẻ nổi tiếng với các sản phẩm đồ gia dụng và trang trí nội thất chất lượng cao và phong cách. Với sự tập trung vào tay nghề thủ công và thiết kế, Xuân Hòa Home tạo ra những tác phẩm vừa có chức năng vừa có tính thẩm mỹ.",
     "aboutParagraph2": "Công ty cung cấp nhiều lựa chọn sản phẩm cho nhiều không gian sống khác nhau, bao gồm phòng khách, phòng ngủ, phòng ăn và khu vực ngoài trời. Bộ sưu tập của chúng tôi bao gồm rèm cửa sổ, cửa sổ và cửa ra vào, bàn ghế, gạch gỗ, v.v. Mỗi mảnh được chế tạo tỉ mỉ bằng vật liệu chất lượng để đảm bảo độ bền và tuổi thọ.",
-    "readMore": "Xem thêm",
+    "readMore": "Xem thêm...",
     "aboutParagraph3": "Xuân Hòa Home tự hào về sự quan tâm đến từng chi tiết và cam kết cung cấp các sản phẩm đáp ứng nhu cầu và sở thích của khách hàng. Các thiết kế thường là sự pha trộn giữa các yếu tố hiện đại và truyền thống, cho phép khách hàng tìm thấy những sản phẩm phù hợp với phong cách cá nhân của chúng tôi.",
     "aboutParagraph4": "Ngoài bộ sưu tập tiêu chuẩn, Xuân Hòa Home còn cung cấp các tùy chọn tùy chỉnh, cho phép khách hàng cá nhân hóa sản phẩm của chúng tôi để phù hợp với yêu cầu cụ thể của chúng tôi. Điều này bao gồm việc lựa chọn các loại vải, lớp hoàn thiện và kích thước khác nhau để tạo ra một tác phẩm thực sự độc đáo.",
     "aboutParagraph5": "Công ty duy trì sự tập trung mạnh mẽ vào tính bền vững và trách nhiệm với môi trường. Chúng tôi cố gắng sử dụng các vật liệu và quy trình sản xuất thân thiện với môi trường, giảm thiểu tác động của chúng tôi đối với môi trường.",
