--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -103,5 +103,8 @@
     "xhhProducts": "Products",
     "newArrival": "New Arrival",
 
-    "tableChairSet": "Table and Chair Set"
+    "tableChairSet": "Table and Chair Set",
+
+    "showing": "Showing",
+    "results": "Results"
 }
