--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -105,5 +105,8 @@
     "xhhProducts": "Sản phẩm",
     "newArrival": "Mới",
 
-    "tableChairSet": "Bộ bàn ghế"
+    "tableChairSet": "Bộ bàn ghế",
+
+    "showing": "Hiển thị",
+    "results": "kết quả"
 }
