--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -106,5 +106,7 @@
     "tableChairSet": "Table and Chair Set",
 
     "showing": "Showing",
-    "results": "Results"
+    "results": "Results",
+
+    "recentPosts": "Recent posts"
 }
