--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -108,5 +108,7 @@
     "tableChairSet": "Bộ bàn ghế",
 
     "showing": "Hiển thị",
-    "results": "kết quả"
+    "results": "kết quả",
+
+    "recentPosts": "Bài viết gần đây"
 }
