--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -108,5 +108,6 @@
     "showing": "Showing",
     "results": "Results",
 
-    "recentPosts": "Recent posts"
+    "recentPosts": "Recent posts",
+    "similarProducts": "Similar products"
 }
