--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -110,5 +110,7 @@
     "showing": "Hiển thị",
     "results": "kết quả",
 
-    "recentPosts": "Bài viết gần đây"
+    "recentPosts": "Bài viết gần đây",
+
+    "similarProducts": "Sản phẩm được quan tâm nhiều"
 }
