--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -109,5 +109,8 @@
     "results": "Results",
 
     "recentPosts": "Recent posts",
-    "similarProducts": "Similar products"
+    "similarProducts": "Similar products",
+    "bonus": "Bonus",
+
+    "sale": "Sale"
 }
