--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -112,5 +112,7 @@
 
     "recentPosts": "Bài viết gần đây",
 
-    "similarProducts": "Sản phẩm được quan tâm nhiều"
+    "similarProducts": "Được quan tâm nhiều",
+    "bonus": "Tặng kèm",
+    "sale": "Giảm"
 }
