--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -98,6 +98,7 @@
 
     "single-table": "Table",
     "single-chair": "Chair",
+    "office-tool": "Office tool",
 
     "featuredProducts": "Featured Products",
     "xhhProducts": "Products",
