--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -100,6 +100,7 @@
 
     "single-table": "Bàn lẻ",
     "single-chair": "Ghế lẻ",
+    "office-tool": "Đồ dùng học sinh",
 
     "featuredProducts": "Sản phẩm bán chạy",
     "xhhProducts": "Sản phẩm",
