--- a/xhh/public/locales/en/common.json
+++ b/xhh/public/locales/en/common.json
@@ -122,5 +122,9 @@
 
     "productMenu": "Product Menu",
 
-    "info": "Info"
+    "info": "Info",
+
+    "all": "All",
+
+    "cancel": "Cancel"
 }
