--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -124,5 +124,9 @@
 
     "productMenu": "Danh mục sản phẩm",
 
-    "info": "Thông tin"
+    "info": "Thông tin",
+
+    "all": "Tất cả",
+
+    "cancel": "Bỏ chọn"
 }
