--- a/xhh/public/locales/vi/common.json
+++ b/xhh/public/locales/vi/common.json
@@ -100,7 +100,7 @@
 
     "single-table": "Bàn",
     "single-chair": "Ghế",
-    "office-tool": "Đồ dùng học sinh",
+    "office-tool": "Bảng Từ",
 
     "featuredProducts": "Sản phẩm bán chạy",
     "xhhProducts": "Sản phẩm",
